--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -1369,7 +1369,7 @@
     "desktop\/php\/custom.php": {
         "401 - Accès non autorisé": "401 - Accès non autorisé",
         "Attention : tout ce que vous écrivez ici est global et inclus sur toutes les pages. La moindre erreur peut rendre votre": "Attention : tout ce que vous écrivez ici est global et inclus sur toutes les pages. La moindre erreur peut rendre votre",
-        "non fonctionel.": "non fonctionel.",
+        "non fonctionel.": "non fonctionnel.",
         "Activer": "Activer",
         "Desktop": "Desktop",
         "Mobile": "Mobile",
@@ -2679,10 +2679,10 @@
     "desktop\/js\/administration.js": {
         "Êtes-vous sûr de vouloir réinitialiser la clé API de ": "Êtes-vous sûr de vouloir réinitialiser la clé API de ",
         "Commande réalisée avec succès": "Commande réalisée avec succès",
-        "Attention ceci est une opération risquée (vidage du cache), Confirmez vous vouloir la faire ?": "Attention ceci est une opération risquée (vidage du cache), Confirmez vous vouloir la faire ?",
+        "Attention ceci est une opération risquée (vidage du cache), Confirmez vous vouloir la faire ?": "Attention ceci est une opération risquée (vidage du cache), Confirmez-vous vouloir la faire ?",
         "Sauvegarde réussie": "Sauvegarde réussie",
-        "Attention ceci est une opération risquée. Confirmez-vous que vous comprennez bien les risques et qu\\'en cas de": "Attention ceci est une opération risquée. Confirmez-vous que vous comprennez bien les risques et qu\\'en cas de",
-        "non fonctionel par la suite aucune demande de support ne sera acceptée (cette tentative d\\'accès est enregistrée) ?": "non fonctionel par la suite aucune demande de support ne sera acceptée (cette tentative d\\'accès est enregistrée) ?",
+        "Attention ceci est une opération risquée. Confirmez-vous que vous comprennez bien les risques et qu\\'en cas de": "Attention ceci est une opération risquée. Confirmez-vous que vous comprenez bien les risques et qu\\'en cas de",
+        "non fonctionel par la suite aucune demande de support ne sera acceptée (cette tentative d\\'accès est enregistrée) ?": "non fonctionnel par la suite aucune demande de support ne sera acceptée (cette tentative d\\'accès est enregistrée) ?",
         "Connexion échouée :": "Connexion échouée :",
         "Connexion réussie": "Connexion réussie",
         "Décocher pour desactiver l\\'action": "Décocher pour desactiver l\\'action",
@@ -2698,7 +2698,7 @@
         "Vérification base de données": "Vérification base de données",
         "Vérification des packages": "Vérification des packages",
         "Nettoyage lancé avec succès. Pour suivre l\\'avancement merci de regarder le log cleaningdb": "Nettoyage lancé avec succès. Pour suivre l\\'avancement merci de regarder le log cleaningdb",
-        "Création des commandes virtuel réussies": "Création des commandes virtuel réussies",
+        "Création des commandes virtuel réussies": "Création des commandes virtuelles réussies",
         "Somme": "Somme",
         "Moyenne": "Moyenne",
         "Texte": "Texte",
@@ -2720,7 +2720,7 @@
     },
     "desktop\/js\/object.js": {
         "Graphique des liens": "Graphique des liens",
-        "Bibliotheque d'images": "Bibliotheque d'images",
+        "Bibliotheque d'images": "Bibliothèque d'images",
         "Objets": "Objets",
         "Image supprimée": "Image supprimée",
         "Envoyer": "Envoyer",
@@ -2734,8 +2734,8 @@
         "Résumé(s)": "Résumé(s)"
     },
     "desktop\/js\/system.js": {
-        "Êtes-vous sûr de vouloir éxécuter cette commande : ": "Êtes-vous sûr de vouloir éxécuter cette commande : ",
-        "Celle-ci est classé en dangereuse": "Celle-ci est classé en dangereuse",
+        "Êtes-vous sûr de vouloir éxécuter cette commande : ": "Êtes-vous sûr de vouloir exécuter cette commande : ",
+        "Celle-ci est classé en dangereuse": "Celle-ci est classée en dangereuse",
         "Commande : ": "Commande : "
     },
     "desktop\/js\/backup.js": {
@@ -2751,7 +2751,7 @@
         "Êtes-vous sûr de vouloir envoyer une sauvegarde de": "Êtes-vous sûr de vouloir envoyer une sauvegarde de",
         "sur le cloud ? Une fois lancée cette opération ne peut être annulée": "sur le cloud ? Une fois lancée cette opération ne peut être annulée",
         "Êtes-vous sûr de vouloir rapatrier la sauvegarde cloud": "Êtes-vous sûr de vouloir rapatrier la sauvegarde cloud",
-        "Sauvegarde rapatrier avec succès": "Sauvegarde rapatrier avec succès",
+        "Sauvegarde rapatrier avec succès": "Sauvegarde rapatriée avec succès",
         "L\\'opération est réussie": "L\\'opération est réussie",
         "L\\'opération a échoué": "L\\'opération a échoué"
     },
@@ -2861,7 +2861,7 @@
     },
     "core\/php\/utils.inc.php": {
         "Fichier introuvable : ": "Fichier introuvable : ",
-        "Trop de session, je ne peux pas lister : ": "Trop de session, je ne peux pas lister : ",
+        "Trop de session, je ne peux pas lister : ": "Trop de sessions, je ne peux pas lister : ",
         ". Faire, pour les nettoyer : ": ". Faire, pour les nettoyer : ",
         "Cette action n\\'est pas autorisée en mode démo": "Cette action n\\'est pas autorisée en mode démo",
         "Synthèse": "Synthèse",
@@ -3089,8 +3089,8 @@
         "Mouvement caméra vers le haut": "Mouvement caméra vers le haut",
         "Caméra": "Caméra",
         "Mouvement caméra vers le bas": "Mouvement caméra vers le bas",
-        "Mouvement caméra vers le gauche": "Mouvement caméra vers le gauche",
-        "Mouvement caméra vers le droite": "Mouvement caméra vers le droite",
+        "Mouvement caméra vers le gauche": "Mouvement caméra vers la gauche",
+        "Mouvement caméra vers le droite": "Mouvement caméra vers la droite",
         "Zoom caméra vers l\\'avant": "Zoom caméra vers l\\'avant",
         "Zoom caméra vers l\\'arrière": "Zoom caméra vers l\\'arrière",
         "Stop caméra": "Stop caméra",
@@ -3476,7 +3476,7 @@
         "Lancement de l\\'installation de ": "Lancement de l\\'installation de ",
         " en version ": " en version ",
         "Objet introuvable sur le market : ": "Objet introuvable sur le market : ",
-        "Aucun serveur de backup defini. Avez vous bien un abonnement au backup cloud ?": "Aucun serveur de backup defini. Avez vous bien un abonnement au backup cloud ?",
+        "Aucun serveur de backup defini. Avez vous bien un abonnement au backup cloud ?": "Aucun serveur de backup defini. Avez-vous bien un abonnement au backup cloud ?",
         "Vous devez obligatoirement avoir un mot de passe pour le backup cloud (allez dans Réglages -> Système -> Configuration puis onglet Mise à jour\/Market)": "Vous devez obligatoirement avoir un mot de passe pour le backup cloud (allez dans Réglages -> Système -> Configuration puis onglet Mise à jour\/Market)",
         "Besoin de faire de la place sur le stockage distant": "Besoin de faire de la place sur le stockage distant",
         "Pas assez de place et aucun backup à supprimer": "Pas assez de place et aucun backup à supprimer",
@@ -3935,7 +3935,7 @@
         "Arrêt forcé du scénario : ": "Arrêt forcé du scénario : ",
         "Désactivation du scénario : ": "Désactivation du scénario : ",
         "Activation du scénario : ": "Activation du scénario : ",
-        "Remise à zero des status du status des SI du scénario : ": "Remise à zero des status du status des SI du scénario : ",
+        "Remise à zero des status du status des SI du scénario : ": "Remise à zéro des status du status des SI du scénario : ",
         "Affectation de la variable ": "Affectation de la variable ",
         " => ": " => ",
         "Suppression de la variable ": "Suppression de la variable ",
@@ -3996,20 +3996,20 @@
         "Attention le plugin ": "Attention le plugin ",
         " n\\'a recu de message depuis ": " n\\'a recu de message depuis ",
         " min": " min",
-        "La tache plugin::cron n\\'arrive pas à finir à cause du plugin : ": "La tache plugin::cron n\\'arrive pas à finir à cause du plugin : ",
+        "La tache plugin::cron n\\'arrive pas à finir à cause du plugin : ": "La tâche plugin::cron n\\'arrive pas à finir à cause du plugin : ",
         " nous vous conseillons de désactiver le plugin et de contacter l\\'auteur": " nous vous conseillons de désactiver le plugin et de contacter l\\'auteur",
         "Erreur sur la fonction cron du plugin : ": "Erreur sur la fonction cron du plugin : ",
-        "La tache plugin::cron5 n\\'arrive pas à finir à cause du plugin : ": "La tache plugin::cron5 n\\'arrive pas à finir à cause du plugin : ",
+        "La tache plugin::cron5 n\\'arrive pas à finir à cause du plugin : ": "La tâche plugin::cron5 n\\'arrive pas à finir à cause du plugin : ",
         "Erreur sur la fonction cron5 du plugin : ": "Erreur sur la fonction cron5 du plugin : ",
-        "La tache plugin::cron10 n\\'arrive pas à finir à cause du plugin : ": "La tache plugin::cron10 n\\'arrive pas à finir à cause du plugin : ",
+        "La tache plugin::cron10 n\\'arrive pas à finir à cause du plugin : ": "La tâche plugin::cron10 n\\'arrive pas à finir à cause du plugin : ",
         "Erreur sur la fonction cron10 du plugin : ": "Erreur sur la fonction cron10 du plugin : ",
-        "La tache plugin::cron15 n\\'arrive pas à finir à cause du plugin : ": "La tache plugin::cron15 n\\'arrive pas à finir à cause du plugin : ",
+        "La tache plugin::cron15 n\\'arrive pas à finir à cause du plugin : ": "La tâche plugin::cron15 n\\'arrive pas à finir à cause du plugin : ",
         "Erreur sur la fonction cron15 du plugin : ": "Erreur sur la fonction cron15 du plugin : ",
-        "La tache plugin::cron30 n\\'arrive pas à finir à cause du plugin : ": "La tache plugin::cron30 n\\'arrive pas à finir à cause du plugin : ",
+        "La tache plugin::cron30 n\\'arrive pas à finir à cause du plugin : ": "La tâche plugin::cron30 n\\'arrive pas à finir à cause du plugin : ",
         "Erreur sur la fonction cron30 du plugin : ": "Erreur sur la fonction cron30 du plugin : ",
-        "La tache plugin::cronDaily n\\'arrive pas à finir à cause du plugin : ": "La tache plugin::cronDaily n\\'arrive pas à finir à cause du plugin : ",
+        "La tache plugin::cronDaily n\\'arrive pas à finir à cause du plugin : ": "La tâche plugin::cronDaily n\\'arrive pas à finir à cause du plugin : ",
         "Erreur sur la fonction cronDaily du plugin : ": "Erreur sur la fonction cronDaily du plugin : ",
-        "La tache plugin::cronHourly n\\'arrive pas à finir à cause du plugin : ": "La tache plugin::cronHourly n\\'arrive pas à finir à cause du plugin : ",
+        "La tache plugin::cronHourly n\\'arrive pas à finir à cause du plugin : ": "La tâche plugin::cronHourly n\\'arrive pas à finir à cause du plugin : ",
         "Erreur sur la fonction cronHourly du plugin : ": "Erreur sur la fonction cronHourly du plugin : ",
         "Erreur sur la fonction start du plugin : ": "Erreur sur la fonction start du plugin : ",
         "Erreur sur la fonction stop du plugin : ": "Erreur sur la fonction stop du plugin : ",
@@ -4113,7 +4113,7 @@
         "Arrêter": "Arrêter",
         "Activer": "Activer",
         "Désactiver": "Désactiver",
-        "Remise à zero des SI": "Remise à zero des SI",
+        "Remise à zero des SI": "Remise à zéro des SI",
         "Tags": "Tags",
         "Aucun": "Aucun"
     },
@@ -4145,7 +4145,7 @@
     },
     "core\/template\/scenario\/equipement.default.html": {
         "Equipement": "Equipement",
-        "Selectionner un équipement": "Selectionner un équipement",
+        "Selectionner un équipement": "Sélectionner un équipement",
         "Action": "Action",
         "Visible": "Visible",
         "Masquer": "Masquer",
