--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -59,7 +59,7 @@
     "mobile\/js\/equipment.js": {
         "Tout": "Alles",
         "Synthèse": "Synthese",
-        "Aperçu": "übersicht"
+        "Aperçu": "Übersicht"
     },
     "mobile\/js\/application.js": {
         "Résumé": "Zusammenfassung",
@@ -67,7 +67,7 @@
         "Préviens moi": "Lassen Sie mich wissen",
         "Me prévenir si": "Warne mich, wenn",
         "Mise à jour de l\\'application en cours": "Update im Laufen",
-        "Erreur lors de la mise à jour": "Fehler bei der ubdate",
+        "Erreur lors de la mise à jour": "Fehler bei der update",
         "Nouvelle tentative dans 5s": "Neuer Versuch in 5 Sekunden",
         "Synthèse": "Synthese",
         "Accueil": "Mein Haus"
@@ -281,7 +281,7 @@
         "Configuration": "Konfiguration",
         "(Re)Démarrer": "(Re) Anfang",
         "Arrêter": "Beenden",
-        "Gestion automatique": "Automatische management",
+        "Gestion automatique": "Automatisches management",
         "Dernier lancement": "Letzter Start",
         "Local": "Lokal",
         "OK": "Ok",
@@ -1017,7 +1017,7 @@
         "Scénario": "Szenario",
         "Statut": "Status",
         "Dernier lancement": "Letzter Start",
-        "Actif": "aktiviert",
+        "Actif": "Aktiviert",
         "Visible": "Sichtbar",
         "Multi lancement": "Mehrfachstart",
         "Mode synchrone": "Synchroner Modus",
@@ -1026,7 +1026,7 @@
         "Actions": "Aktionen",
         "Erreur": "Fehler",
         "En cours": "In Bearbeitung",
-        "Arrêté": "gestoppt",
+        "Arrêté": "Gestoppt",
         "Défaut": "Standard",
         "Aucun": "Ohne",
         "Temps réel": "Echtzeit",
@@ -1360,7 +1360,7 @@
     "desktop\/php\/plugin.php": {
         "401 - Accès non autorisé": "401 - Nicht autorisierter Zugriff",
         "Gestion": "Management",
-        "Synchroniser": "synchronisieren",
+        "Synchroniser": "Synchronisieren",
         "Plugins": "Plugins",
         "Mes plugins": "Meine Plugins",
         "Rechercher": "Suchen nach",
@@ -1569,7 +1569,7 @@
         "Gestion avancée": "Erweiterte Management",
         "IP": "IP",
         "Mac": "MAC",
-        "Désactiver la gestion du réseau par": "Deaktivieren der Netzwerkm*anagement von",
+        "Désactiver la gestion du réseau par": "Deaktivieren der Netzwerk management von",
         "Masque IP local (utile que pour les installations type docker, sous la forme 192.168.1.*)": "Lokale IP-Maske (nur für Docker-Installationen in der Form 192.168.1 nützlich. *)",
         "MTU spécifique pour le DNS (expert)": "Spezifische MTU für DNS (Experte)",
         "DNS (proxy)": "DNS (Proxy)",
@@ -1578,7 +1578,7 @@
         "Statut DNS": "DNS Status",
         "Démarré : ": "Gestartet :",
         "Normal si vous n\\'avez pas coché la case : Utiliser les DNS": "Normal, wenn Sie das Kontrollkästchen nicht aktiviert haben: DNS verwenden",
-        "Arrêté": "gestoppt",
+        "Arrêté": "Gestoppt",
         "Gestion": "Management",
         "(Re)démarrer": "(Neu)Start",
         "Arrêter": "Beenden",
@@ -1885,7 +1885,7 @@
         "Rechercher une commande": "Finden Sie eine Bestellung",
         "Authentification en 2 étapes": "2-stufige Authentifizierung",
         "Configurer": "Projektierungs",
-        "Actif": "aktiviert",
+        "Actif": "Aktiviert",
         "Mot de passe": "Passwort",
         "Retapez le mot de passe": "Geben Sie das Passwort erneut ein",
         "Hash de l'utilisateur": "Benutzer-Hash",
@@ -2004,7 +2004,7 @@
         "Ne rien mettre pour laisser le nom par défaut": "Lassen Sie nichts, um den Standardnamen zu belassen",
         "Groupe": "Gruppe",
         "Groupe du scénario": "Szenariogruppe",
-        "Actif": "aktiviert",
+        "Actif": "Aktiviert",
         "Visible": "Sichtbar",
         "Objet parent": "Übergeordnetes Objekt",
         "Log": "Log",
@@ -2090,7 +2090,7 @@
         "Actions": "Aktionen",
         "Nom": "Name",
         "Groupe": "Gruppe",
-        "Actif": "aktiviert",
+        "Actif": "Aktiviert",
         "Icône": "Symbol",
         "Choisir": "Wählen",
         "Demande": "Anwendung",
@@ -2162,7 +2162,7 @@
         "Désactiver accès support": "Deaktivieren Sie den Supportzugriff",
         "Sauvegarder": "Speichern",
         "Utilisateur": "Benutzer",
-        "Actif": "aktiviert",
+        "Actif": "Aktiviert",
         "Profil": "Profil",
         "Clef API": "API-Schlüssel",
         "Double authentification": "Doppelte Authentifizierung",
@@ -2205,7 +2205,7 @@
         "Ajouter": "einfügen",
         "Sauvegarder": "Speichern",
         "ID": "Identifikation",
-        "Actif": "aktiviert",
+        "Actif": "Aktiviert",
         "PID": "PID",
         "Unique": "Single",
         "Classe": "Klasse",
@@ -2343,7 +2343,7 @@
         "Supprimer": "Löschen",
         "Visible": "Sichtbar",
         "Invisible": "Unsichtbar",
-        "Actif": "aktiviert",
+        "Actif": "Aktiviert",
         "Inactif": "Inaktiv",
         "Résumé": "Zusammenfassung",
         "Historique": "Chronik",
@@ -2420,7 +2420,7 @@
         "Activer": "Aktivieren",
         "Non": "Nicht",
         "Statut": "Status",
-        "Actif": "aktiviert",
+        "Actif": "Aktiviert",
         "Inactif": "Inaktiv",
         "Action": "Aktion",
         "Désactiver": "Deactivate",
@@ -2537,7 +2537,7 @@
         "Détails du cron": "Cron Details",
         "Détails du listener": "Hörerdetails",
         "En cours": "In Bearbeitung",
-        "Arrêté": "gestoppt",
+        "Arrêté": "Gestoppt",
         "Démarrage": "Start-up",
         "Arrêt": "Anschlag",
         "Détails de cette tâche": "Details zu dieser Aufgabe",
@@ -2546,7 +2546,7 @@
         "Supprimer cette tâche": "Löschen Sie diese Aufgabe",
         "Démarrer ou re-démarrer": "Starten oder neu starten",
         "Arrêter": "Beenden",
-        "Activer la gestion automatique du démon": "Aktivieren Sie die automatische Management des Dämons",
+        "Activer la gestion automatique du démon": "Aktivieren Sie die Automatisches management des Dämons",
         "Désactiver la gestion automatique du démon": "Deaktivieren Sie die automatische Daemon-Management"
     },
     "desktop\/js\/history.js": {
@@ -2569,7 +2569,7 @@
         "Quel est le nouveau mot de passe ?": "Was ist das neue Passwort?",
         "Êtes-vous sûr de vouloir changer la clef API de l\\'utilisateur ?": "Möchten Sie den API-Schlüssel des Benutzers wirklich ändern?",
         "Modification effectuée": "Änderung vorgenommen",
-        "Actif": "aktiviert",
+        "Actif": "Aktiviert",
         "Local": "Lokal",
         "Ne pas faire de rotation clef api": "API-Schlüssel nicht drehen",
         "Administrateur": "Verwalter",
@@ -2818,10 +2818,10 @@
         "Ne rien mettre": "Setzen Sie nichts",
         "Valider": "Validate",
         "Erreur": "Fehler",
-        "Actif": "aktiviert",
+        "Actif": "Aktiviert",
         "Démarrage": "Start-up",
         "En cours": "In Bearbeitung",
-        "Arrêté": "gestoppt",
+        "Arrêté": "Gestoppt",
         "Jamais": "Noch nie",
         "Inactif": "Inaktiv",
         "Evénement": "Ereignis",
@@ -4060,7 +4060,7 @@
         "avec #stype# :": "mit # stype #:",
         "Dépendances en cours d\\'installation": "Nebengebäude während der Installation",
         "Dépendances non installées": "Nebengebäude nicht installiert",
-        "Gestion automatique désactivée": "Automatische management deaktiviert",
+        "Gestion automatique désactivée": "Automatisches management deaktiviert",
         "Les crons et démons sont désactivés": "Crones und Dämonen sind deaktiviert",
         "Jeedom n\\'est pas encore démarré": "Jeedom ist noch nicht gestartet",
         "Vous devez attendre au moins 45 secondes entre deux lancements du démon. Dernier lancement : ": "Sie müssen zwischen zwei Starts des Dämons mindestens 45 Sekunden warten. Letzter Start:",
@@ -4141,7 +4141,7 @@
         "Scénario": "Szenario",
         "Action": "Aktion",
         "Démarrer": "Start",
-        "Démarrer (sync)": "Starten (synchronisieren)",
+        "Démarrer (sync)": "Starten (Synchronisieren)",
         "Arrêter": "Beenden",
         "Activer": "Aktivieren",
         "Désactiver": "Deactivate",
@@ -4217,7 +4217,7 @@
         "Sélectionner la commande": "Befehl auswählen"
     },
     "core\/template\/scenario\/setColoredIcon.default.html": {
-        "Actif": "aktiviert",
+        "Actif": "Aktiviert",
         "Inactif": "Inaktiv"
     },
     "core\/template\/scenario\/scenario_return.default.html": {
