Allow group by hour in graph's view

--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -2581,6 +2581,10 @@
         "Colonne": "Column",
         "Camembert": "Pie chart",
         "Aucun groupement": "No group",
+        "Somme par heure": "Sum per hour",
+        "Moyenne par heure": "Hourly average",
+        "Minimum par heure": "Hourly minimum",
+        "Maximum par heure": "Hourly maximum",
         "Somme par jour": "Sum per day",
         "Moyenne par jour": "Daily average",
         "Minimum par jour": "Daily minimum",
