--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -2581,6 +2581,10 @@
         "Colonne": "Colonne",
         "Camembert": "Camembert",
         "Aucun groupement": "Aucun groupement",
+        "Somme par heure": "Somme par heure",
+        "Moyenne par heure": "Moyenne par heure",
+        "Minimum par heure": "Minimum par heure",
+        "Maximum par heure": "Maximum par heure",
         "Somme par jour": "Somme par jour",
         "Moyenne par jour": "Moyenne par jour",
         "Minimum par jour": "Minimum par jour",
