--- a/core/i18n/id_ID.json
+++ b/core/i18n/id_ID.json
@@ -2581,6 +2581,10 @@
         "Colonne": "Kolom",
         "Camembert": "Keju Camembert",
         "Aucun groupement": "Tidak ada kelompok",
+        "Somme par heure": "Sum per jam",
+        "Moyenne par heure": "Rata-rata jam per",
+        "Minimum par heure": "Minimum per jam",
+        "Maximum par heure": "Maksimum per jam",
         "Somme par jour": "Sum per hari",
         "Moyenne par jour": "Rata-rata harian",
         "Minimum par jour": "Minimum harian",
