--- a/core/i18n/it_IT.json
+++ b/core/i18n/it_IT.json
@@ -2581,6 +2581,10 @@
         "Colonne": "Colonna",
         "Camembert": "Camembert",
         "Aucun groupement": "Nessun gruppo",
+        "Somme par heure": "Somma all'ora",
+        "Moyenne par heure": "All'ora media",
+        "Minimum par heure": "Minimo per ora",
+        "Maximum par heure": "Massimo all'ora",
         "Somme par jour": "Somma al giorno",
         "Moyenne par jour": "Media giornaliera",
         "Minimum par jour": "Giornaliera minima",
