--- a/core/i18n/ja_JP.json
+++ b/core/i18n/ja_JP.json
@@ -2581,6 +2581,10 @@
         "Colonne": "コラム",
         "Camembert": "カマンベール",
         "Aucun groupement": "何のグループません",
+        "Somme par heure": "時間あたり合計",
+        "Moyenne par heure": "時間あたりの平均",
+        "Minimum par heure": "時間あたりの最低",
+        "Maximum par heure": "時間あたりの最大",
         "Somme par jour": "一日あたりの合計",
         "Moyenne par jour": "毎日の平均",
         "Minimum par jour": "最小毎日",
