--- a/core/i18n/pt_PT.json
+++ b/core/i18n/pt_PT.json
@@ -2581,6 +2581,10 @@
         "Colonne": "Coluna",
         "Camembert": "Queijo Camembert",
         "Aucun groupement": "Nenhum grupo",
+        "Somme par heure": "Soma por hora",
+        "Moyenne par heure": "Por hora médio",
+        "Minimum par heure": "Mínimo por hora",
+        "Maximum par heure": "Máxima por hora",
         "Somme par jour": "Soma por dia",
         "Moyenne par jour": "Média diária",
         "Minimum par jour": "Mínima diária",
