--- a/core/i18n/ru_RU.json
+++ b/core/i18n/ru_RU.json
@@ -2581,6 +2581,10 @@
         "Colonne": "колонка",
         "Camembert": "камамбер",
         "Aucun groupement": "нет группы",
+        "Somme par heure": "Сумма в час",
+        "Moyenne par heure": "В среднем за час",
+        "Minimum par heure": "Минимум за час",
+        "Maximum par heure": "Максимально за час",
         "Somme par jour": "Сумма в день",
         "Moyenne par jour": "среднесуточной",
         "Minimum par jour": "Минимальная ежедневная",
