--- a/core/i18n/tr.json
+++ b/core/i18n/tr.json
@@ -2581,6 +2581,10 @@
         "Colonne": "Sütun",
         "Camembert": "Yuvarlak grafik",
         "Aucun groupement": "Hiçbir gruplama",
+        "Somme par heure": "Saatte Sum",
+        "Moyenne par heure": "Saatlik ortalama",
+        "Minimum par heure": "Saatlik minimum",
+        "Maximum par heure": "Saat başı maksimum",
         "Somme par jour": "Günde Sum",
         "Moyenne par jour": "Günlük ortalama",
         "Minimum par jour": "Günlük minimum",
